 - issue #125 : add property to Coordinates class to close a line 
 - issue #130 : remove unnecessary AriadneLocation conversion and try-catch in DetailsActivity and MainActivity
 - issue #132 : remove Android permission INTERNET, it is not needed to get WiFi/cell phone based location updates
 - issue #133 : add list of used sensors to AndroidManifest
 - issue #103 : don't calculate speed if distance between current and previous location is smaller than the current accuracy
 - issue #135 : update JavaDoc on website (gh-pages) after a successful Travis CI build.
 - translated to German (thanks to Christian Orj and Kilian Köppchen)
 - translated to Romanian (thanks to Eduard Moraru)
 - issue #143 : compile against latest Android SDK using maven-android-sdk-deployer plugin
 - issue #144 : use Robolectric for unit tests
 - issue #41 : use sensors (gyroscope, acceleration, compass) to get more accurate bearing
 - move isTimestampRecent() to Tools class, using it in GeoOrientation and AriadneLocation classes
 - issue #131 : add Preference to enable sensor based updates of current bearing
 - add preference to select prefered orientation sensor
 - issue #148 : current bearing is not updated when using sensors
 - issue #137 : combine sensor and location based bearing to get quicker and more accurate updates

 v0.1.1 (released on 04Dec2013)
 - updated license info about third party material
 - updated ic_action_refresh.png icon
 - added feature list to README.md

 v0.1 (released on 03Dec2013)
features :
 - determine location based on GPS signal, WiFi or cell phone network :
     - use best/most accurate location provider
     - get location updates automatically (based on a time interval or change of location) or
     - get location on demand (by manually refreshing)
 - save a location
 - ‘get back’ mode : indicator pointing to a stored location (showing distance and direction)
 - indicate current speed and current bearing